Gesamtbreite/Responive 2000px V0.1

--- a/Produkt.html
+++ b/Produkt.html
@@ -50,10 +50,10 @@
                 <!-- 2 columns Produktinfos mit links Bild rechts Text -->
                 <div class="container-1">
                     <div class="row">
-                        <div class="column-50">
+                        <div class="column-50-left">
                             <img src="Fahrradbild_schlechte_Auflösung.png" alt="Fahrradbild" width="350" height="500">
                         </div>
-                        <div class="column-50">
+                        <div class="column-50-right">
                             <h1> Technische Daten </h1>
                             <p> hier soll die Tabelle hin </p>
                             <button class="button" style?="background-color:blue">Read more</button>
@@ -65,12 +65,12 @@
             <!-- 2 columns Produktinfos mit rechts Bild links Text -->
             <div class="container-2">
                 <div class="row">
-                    <div class="column-50">
+                    <div class="column-50-left">
                         <h1> Das Komplettpaket </h1>
                         <p> Infos zum Paket </p>
                         <button class="button" style?="background-color:blue">Read more</button>
                     </div>
-                    <div class="column-50">
+                    <div class="column-50-right">
                         <img src="#Bild vom Paket" alt="Hier sollen Produktbilder hin" width="350" height="500">
                     </div>
                 </div>
