--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <!-- 2 Spalten Container mit links Bild rechts Text -->
                 <div class="container-1">
                     <div class="row">
-                        <div class="column-50">
+                        <div class="column-50-left">
                             <img src="Montur.svg" alt="Monturpiktogramm" width="350" height="500">
                         </div>
-                        <div class="column-50">
+                        <div class="column-50-right">
                             <h1> Das schaffen Sie mit links! </h1>
                             <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren. Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
-                                </p>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -65,12 +65,12 @@
                 <!-- 2 Spalten Container mit rechts Bild links Text -->
                 <div class="container-2">
                     <div class="row">
-                        <div class="column-50">
+                        <div class="column-50-left">
                             <h1> Worlwide und doch direkt vor Ihrer Haustüre </h1>
                             <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
                             <button class="button" style?="background-color:blue">Read more</button>
                         </div>
-                        <div class="column-50">
+                        <div class="column-50-right">
                             <img src="worldwide.svg" alt="Weltsymbol" width="350" height="500">
                         </div>
                     </div>
@@ -79,13 +79,13 @@
                 <!-- 2 Spalten Container mit links Bild rechts Text -->
                 <div class="container-1">
                     <div class="row">
-                        <div class="column-50">
+                        <div class="column-50-left">
                             <img src="mitarbeiter.svg" alt="Mitarbeiterpiktogramm" width="350" height="500">
                         </div>
-                        <div class="column-50">
+                        <div class="column-50-right">
                             <h1> Unsere Mitarbeiter sind mit Herzblut dabei </h1>
                             <p> ... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.
-                                </p>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -93,13 +93,13 @@
                 <!-- 2 Spalten Container mit rechts Bild links Text -->
                 <div class="container-2">
                     <div class="row">
-                        <div class="column-50">
+                        <div class="column-50-left">
                             <h1> Die Umwelt geht uns alle etwas an </h1>
                             <p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.
-                                </p>
+                            </p>
                             <button class="button" style?="background-color:blue">Read more</button>
                         </div>
-                        <div class="column-50">
+                        <div class="column-50-right">
                             <img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitssymbol" width="350" height="500">
                         </div>
                     </div>
