--- a/Produkt.html
+++ b/Produkt.html
@@ -105,7 +105,7 @@
             </div>
 
             <div id="copyright">
-                <p>Copyright 2020 Pendix E-Bikes</p>
+                <p>&copy Bikespower</p>
             </div>
 
         </footer>
