--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
 
             <div id="copyright">
-                <p>Copyright 2020 Pendix E-Bikes</p>
+                <p>&copy Bikespower</p>
             </div>
 
         </footer>
