--- a/Über uns.html
+++ b/Über uns.html
@@ -64,7 +64,7 @@
             </div>
 
             <div id="copyright">
-                <p>Copyright 2020 Pendix E-Bikes</p>
+                <p>&copy Bikespower</p>
             </div>
 
         </footer>
