Kleine Änderungen an Produktseite

--- a/Produkt.html
+++ b/Produkt.html
@@ -40,7 +40,7 @@
         <div class="FrontPicture-Produktseite">
           <div class="FrontPicture-Text-Produktseite">
             <h1> Unsere Produkte </h1>
-            <p> sooo ein geiles Produkt </p>
+            <p> Von der Standard Variante bis zum Premium Modell </br> Für jeden das richtige Set! </p>
           </div>
         </div>
 
@@ -51,7 +51,7 @@
         <div class="container-1">
           <div class="row">
             <div class="column-50-left">
-              <img src="Fahrradbild_schlechte_Auflösung.png" alt="Fahrradbild" width="350" height="500">
+              <img src="Bikestail_Skizze_Fahrrad.JPG" alt="Fahrradbild" width="350" height="500">
             </div>
             <div class="column-50-right">
               <h1> Technische Daten </h1>
@@ -60,7 +60,7 @@
             </div>
           </div>
         </div>
-      </div>
+
 
       <!-- 2 columns Produktinfos mit rechts Bild links Text -->
       <div class="container-2">
@@ -71,7 +71,7 @@
             <button class="button" style?="background-color:blue">Read more</button>
           </div>
           <div class="column-50-right">
-            <img src="#Bild vom Paket" alt="Hier sollen Produktbilder hin" width="350" height="500">
+            <img src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
           </div>
         </div>
       </div>
@@ -81,6 +81,9 @@
 
       <!-- der grüne Block mit Premium-->
       <h2 class="separator">Premium Variante</h2>
+
+
+    </div> <!-- Das ist das schließende div von main id  -->
 
     </main>
     <!--Hier endet der Main Bereich-->
