Footer eingefügt (HTML und CSS inkl. responsive)

--- a/index.html
+++ b/index.html
@@ -130,23 +130,31 @@
       </div>
 
       <div class="footer_content">
-        <div class="footer_contact">
-          <p>Hallo ich bin Max</p>
+        <div class="column-footer-left">
+          <p>Home</p>
+          <p>Produkte</p>
+          <p>Kontakt</p>
+          <p>Über uns</p>
         </div>
-        <div class="footer_socialmedia">
-          <p>Hier sollen die Social Media Logos hinterlegt werden.</p>
+        <div class="column-footer-middle">
+          <p>Electronic Bikes</p>
+          <p>Marienstraße 20</p>
+          <p>Heidenheim</p>
         </div>
-        <div class="footer_contact">
-          <p>Hier kommen die Kontaktdaten hin</p>
+        <div class="column-footer-right">
+          <p>Follow us.</p>
+          <p>Facebook</p>
+          <p>Instagram</p>
         </div>
       </div>
 
-      <div id="copyright">
-        <p>&copy Bikespower</p>
-      </div>
+  </div>
 
-    </footer>
-    <!--Hier endet der Footer Bereich-->
+
+
+
+  </footer>
+  <!--Hier endet der Footer Bereich-->
 
 
 
