--- a/Über uns.html
+++ b/Über uns.html
@@ -46,29 +46,36 @@
 
     <footer>
       <!--Hier beginnt der Footer Bereich-->
-
-      <div class="footerpicture">
-        <p>Hier kann noch ein Bild hinterlegt werden</p>
+      <div class="footer">
+        <div class="footer_content">
+          <div class="column-footer-left">
+            <p> <b>Übersicht</b> </p>
+            <p><a href="index.html">Home</a><br></p>
+            <p><a href="Produkt.html">Produkte</a><br></p>
+            <p><a href="Kontakt.html">Kontakt</a><br></p>
+            <p><a href="Über uns.html">Über uns</a><br></p>
+          </div>
+          <div class="column-footer-middle">
+            <p> <b>Kontakt</b> </p>
+            <p>Electronic Bikes GmbH</p>
+            <p>Marienstraße 20</p>
+            <p>89518 Heidenheim</p>
+          </div>
+          <div class="column-footer-right">
+            <p><b>Aktuelle News finden Sie auf unseren Social Media Accounts:</b></p>
+            <div class="social_media">
+              <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
+            </div>
+            <div class="social_media">
+              <a href="https://www.instagram.com"><img src="instagram_logo.svg" alt="Hier kommen Sie zu Instagram"></a>
+            </div>
+            <div class="social_media">
+              <a href="https://www.youtube.de"><img src="youtube_logo.svg" alt="Das ist der Youtube Auftritt"></a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="footer_content">
-        <div class="column-footer-left">
-          <p>Home</p>
-          <p>Produkte</p>
-          <p>Kontakt</p>
-          <p>Über uns</p>
-        </div>
-        <div class="column-footer-middle">
-          <p>Electronic Bikes</p>
-          <p>Marienstraße 20</p>
-          <p>Heidenheim</p>
-        </div>
-        <div class="column-footer-right">
-          <p>Follow us.</p>
-          <p>Facebook</p>
-          <p>Instagram</p>
-        </div>
-      </div>
 
   </div>
 
