Bilder und Frontpicture-Text geändert

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
         <div class="FrontPicture-Startseite">
           <div class="FrontPicture-Text-Startseite">
             <h1> Wir sind Bikepower </h1>
-            <p> Werden Sie ein Teil der Mobilität von morgen und rüsten Sie noch heute Ihr geliebtes Fahrrad mit einem Elektroantrieb aus! Mit unserem Produkt ermöglichen wir Ihnen ganz einfach Ihr aktuelles Fahrrad in ein E-Bike zu verwandeln.
-              Das funktioniert schnell und ist für jeden in ein paar Handgriffen machbar. </p>
+            <p> Mit unseren Komplett-Sets ermöglichen wir Ihnen Ihr aktuelles Fahrrad kinderleicht in ein E-Bike zu verwandeln! </p>
           </div>
         </div>
 
         <!-- der Trennstreifen -->
-        <h2 class="separator"> Unsere Benefits</h2>
+        <h1 class="separator"> Unsere Benefits</h1>
+
+      <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 
         <!-- 2 Spalten Container mit links Bild rechts Text -->
         <div class="container-1">
@@ -55,8 +56,9 @@
               <img src="Montur.svg" alt="Monturpiktogramm" width="350" height="500">
             </div>
             <div class="column-50-right">
-              <h1> Das schaffen Sie mit links! </h1>
-              <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren. Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
+              <h2> Das schaffen Sie mit links! </h2>
+              <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren.
+                Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
               </p>
             </div>
           </div>
@@ -66,7 +68,7 @@
         <div class="container-2">
           <div class="row">
             <div class="column-50-left">
-              <h1> Worlwide und doch direkt vor Ihrer Haustüre </h1>
+              <h2> Worlwide und doch direkt vor Ihrer Haustüre </h2>
               <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
               <button class="button" style?="background-color:blue">Read more</button>
             </div>
@@ -83,7 +85,7 @@
               <img src="mitarbeiter.svg" alt="Mitarbeiterpiktogramm" width="350" height="500">
             </div>
             <div class="column-50-right">
-              <h1> Unsere Mitarbeiter sind mit Herzblut dabei </h1>
+              <h2> Unsere Mitarbeiter sind mit Herzblut dabei </h2>
               <p> ... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.
               </p>
             </div>
@@ -94,7 +96,7 @@
         <div class="container-2">
           <div class="row">
             <div class="column-50-left">
-              <h1> Die Umwelt geht uns alle etwas an </h1>
+              <h2> Die Umwelt geht uns alle etwas an </h2>
               <p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.
               </p>
               <button class="button" style?="background-color:blue">Read more</button>
@@ -105,10 +107,7 @@
           </div>
         </div>
 
-      </div>
-
       <!-- Ende der Benefits -->
-
 
 
       <div class="productbutton">
@@ -117,9 +116,14 @@
         </button>
         <!-- der onclick Befehl ist ein JavaScript Befehl-->
       </div>
+
       <!--Hier endet der Benefits Bereich-->
-    </main>
-    <!--Hier endet der Main Bereich-->
+
+    </div> <!-- schließender Divblock vom  id container_wrapper -->
+
+  </div> <!-- schließender Divblock von id main-->
+
+    </main> <!--Hier endet der Main Bereich-->
 
 
     <footer>
@@ -148,7 +152,7 @@
         </div>
       </div>
 
-  </div>
+
 
 
 
