--- a/Produkt.html
+++ b/Produkt.html
@@ -45,7 +45,10 @@
         </div>
 
         <!-- der grüne Block mit Standard -->
-        <h2 class="separator">Standard Variante</h2>
+        <h1 class="separator">Standard Variante</h1>
+
+    <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
+
 
         <!-- 2 columns Produktinfos mit links Bild rechts Text -->
         <div class="container-1">
@@ -54,7 +57,7 @@
               <img src="Bikestail_Skizze_Fahrrad.JPG" alt="Fahrradbild" width="350" height="500">
             </div>
             <div class="column-50-right">
-              <h1> Technische Daten </h1>
+              <h2> Technische Daten </h2>
               <p> hier soll die Tabelle hin </p>
               <button class="button" style?="background-color:blue">Read more</button>
             </div>
@@ -62,21 +65,21 @@
         </div>
 
 
-      <!-- 2 columns Produktinfos mit rechts Bild links Text -->
-      <div class="container-2">
-        <div class="row">
-          <div class="column-50-left">
-            <h1> Das Komplettpaket </h1>
-            <p> Infos zum Paket </p>
-            <button class="button" style?="background-color:blue">Read more</button>
+        <!-- 2 columns Produktinfos mit rechts Bild links Text -->
+        <div class="container-2">
+          <div class="row">
+            <div class="column-50-left">
+              <h2> Das Komplettpaket </h2>
+              <p> Infos zum Paket </p>
+              <button class="button" style?="background-color:blue">Read more</button>
+            </div>
+            <div class="column-50-right">
+              <img src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
+            </div>
           </div>
-          <div class="column-50-right">
-            <img src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
-          </div>
-        </div>
       </div>
 
-
+      </div> <!-- schließender Divblock vom  id container_wrapper -->
       <!-- hier endet Bikestail  -->
 
       <!-- der grüne Block mit Premium-->
