--- a/Produkt.html
+++ b/Produkt.html
@@ -217,10 +217,10 @@
 		<div class="container-1-Produktdaten">
 			<div class="row">
 				<div class="column-50">
-					<h2> Neue eDrive150start ! </h2>
-					<img src="Produktinfosedrive150.png" alt="Das Neue Edrive 150 !" width="300" height="500">				
+					<h2> Neue eDrive1000 ! </h2>
+					<img src="edrive1000.png" alt="Das Neue Edrive 1000 !" width="300" height="500">				
 					<p>
-						<i>Für alle, die mehr wollen.</i>
+						<i>Dein Antrieb für weite Strecken.</i>
 					</p>
 				</div>
 				
@@ -231,9 +231,9 @@
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a laoreet diam. In hac habitasse platea dictumst. Suspendisse sodales odio non mauris viverra, sed imperdiet lorem dignissim. Suspendisse non blandit mi.
 							</p>
 							<ul>
-								<li>Es bonito</li>
-								<li>Es bonito</li>
-								<li>Es bonito</li>
+								<li>positive punkte</li>
+								<li>positive punkte</li>
+								<li>positive punkte</li>
 							</ul>
 							<div class="label">
 								<p class="p-b-0">
@@ -253,7 +253,7 @@
 						<div class="buy-button">
 							<a href="">
 								<div class="buy-text f-25">Zur Detailansicht</div>
-								<div class="buy-price f-25">973,82 €</div>
+								<div class="buy-price f-25">2.134,79 €</div>
 								<div class="f-10">exkl. Montage, inkl. MwSt., zzgl. Versand</div>
 							</a>
 						</div>
