--- a/Produkt.html
+++ b/Produkt.html
@@ -218,7 +218,7 @@
 			<div class="row">
 				<div class="column-50">
 					<h2> Neue eDrive1000 ! </h2>
-					<img src="edrive1000.png" alt="Das Neue Edrive 1000 !" width="300" height="500">				
+					<img src="edrive1000.jpg" alt="Das Neue Edrive 1000 !" width="300" height="500">				
 					<p>
 						<i>Dein Antrieb für weite Strecken.</i>
 					</p>
