Footer in alle Seiten implementiert

--- a/index.html
+++ b/index.html
@@ -47,123 +47,125 @@
         <!-- der Trennstreifen -->
         <h1 class="separator"> Unsere Benefits</h1>
 
-      <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
+        <div class="wrapper_für_container">
+          <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 
-        <!-- 2 Spalten Container mit links Bild rechts Text -->
-        <div class="container-1">
-          <div class="row">
-            <div class="column-50-left">
-              <img src="Montur.svg" alt="Monturpiktogramm" width="350" height="500">
-            </div>
-            <div class="column-50-right">
-              <h2> Das schaffen Sie mit links! </h2>
-              <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren.
-                Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- 2 Spalten Container mit rechts Bild links Text -->
-        <div class="container-2">
-          <div class="row">
-            <div class="column-50-left">
-              <h2> Worlwide und doch direkt vor Ihrer Haustüre </h2>
-              <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
-              <button class="button" style?="background-color:blue">Read more</button>
-            </div>
-            <div class="column-50-right">
-              <img src="worldwide.svg" alt="Weltsymbol" width="350" height="500">
+          <!-- 2 Spalten Container mit links Bild rechts Text -->
+          <div class="container-1">
+            <div class="row">
+              <div class="column-50-left">
+                <img src="Montur.svg" alt="Monturpiktogramm" width="350" height="500">
+              </div>
+              <div class="column-50-right">
+                <h2> Das schaffen Sie mit links! </h2>
+                <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren.
+                  Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- 2 Spalten Container mit links Bild rechts Text -->
-        <div class="container-1">
-          <div class="row">
-            <div class="column-50-left">
-              <img src="mitarbeiter.svg" alt="Mitarbeiterpiktogramm" width="350" height="500">
-            </div>
-            <div class="column-50-right">
-              <h2> Unsere Mitarbeiter sind mit Herzblut dabei </h2>
-              <p> ... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- 2 Spalten Container mit rechts Bild links Text -->
-        <div class="container-2">
-          <div class="row">
-            <div class="column-50-left">
-              <h2> Die Umwelt geht uns alle etwas an </h2>
-              <p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.
-              </p>
-              <button class="button" style?="background-color:blue">Read more</button>
-            </div>
-            <div class="column-50-right">
-              <img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitssymbol" width="350" height="500">
+          <!-- 2 Spalten Container mit rechts Bild links Text -->
+          <div class="container-2">
+            <div class="row">
+              <div class="column-50-left">
+                <h2> Worlwide und doch direkt vor Ihrer Haustüre </h2>
+                <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
+                <button class="button" style?="background-color:blue">Read more</button>
+              </div>
+              <div class="column-50-right">
+                <img src="worldwide.svg" alt="Weltsymbol" width="350" height="500">
+              </div>
             </div>
           </div>
-        </div>
 
-      <!-- Ende der Benefits -->
+          <!-- 2 Spalten Container mit links Bild rechts Text -->
+          <div class="container-1">
+            <div class="row">
+              <div class="column-50-left">
+                <img src="mitarbeiter.svg" alt="Mitarbeiterpiktogramm" width="350" height="500">
+              </div>
+              <div class="column-50-right">
+                <h2> Unsere Mitarbeiter sind mit Herzblut dabei </h2>
+                <p> ... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- 2 Spalten Container mit rechts Bild links Text -->
+          <div class="container-2">
+            <div class="row">
+              <div class="column-50-left">
+                <h2> Die Umwelt geht uns alle etwas an </h2>
+                <p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.
+                </p>
+                <button class="button" style?="background-color:blue">Read more</button>
+              </div>
+              <div class="column-50-right">
+                <img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitssymbol" width="350" height="500">
+              </div>
+            </div>
+          </div>
+
+          <!-- Ende der Benefits -->
 
 
-      <div class="productbutton">
-        <button onclick="location.href='https://www.google.de'" type="button" name="button">
-          <p>Zu unseren Produkten</p>
-        </button>
-        <!-- der onclick Befehl ist ein JavaScript Befehl-->
-      </div>
+          <div class="productbutton">
+            <button onclick="location.href='https://www.google.de'" type="button" name="button">
+              <p>Zu unseren Produkten</p>
+            </button>
+            <!-- der onclick Befehl ist ein JavaScript Befehl-->
+          </div>
 
-      <!--Hier endet der Benefits Bereich-->
+          <!--Hier endet der Benefits Bereich-->
 
-    </div> <!-- schließender Divblock vom  id container_wrapper -->
+        </div> <!-- schließender Divblock vom  id container_wrapper -->
 
-  </div> <!-- schließender Divblock von id main-->
+      </div> <!-- schließender Divblock von id main-->
 
-    </main> <!--Hier endet der Main Bereich-->
+    </main>
+    <!--Hier endet der Main Bereich-->
 
 
     <footer>
       <!--Hier beginnt der Footer Bereich-->
-
-      <div class="footerpicture">
-        <p>Hier kann noch ein Bild hinterlegt werden</p>
+      <div class="footer">
+        <div class="footer_content">
+          <div class="column-footer-left">
+            <p> <b>Übersicht</b> </p>
+            <p><a href="index.html">Home</a><br></p>
+            <p><a href="Produkt.html">Produkte</a><br></p>
+            <p><a href="Kontakt.html">Kontakt</a><br></p>
+            <p><a href="Über uns.html">Über uns</a><br></p>
+          </div>
+          <div class="column-footer-middle">
+            <p> <b>Kontakt</b> </p>
+            <p>Electronic Bikes GmbH</p>
+            <p>Marienstraße 20</p>
+            <p>89518 Heidenheim</p>
+          </div>
+          <div class="column-footer-right">
+            <p><b>Aktuelle News finden Sie auf unseren Social Media Accounts:</b></p>
+            <div class="social_media">
+              <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
+            </div>
+            <div class="social_media">
+              <a href="https://www.instagram.com"><img src="instagram_logo.svg" alt="Hier kommen Sie zu Instagram"></a>
+            </div>
+            <div class="social_media">
+              <a href="https://www.youtube.de"><img src="youtube_logo.svg" alt="Das ist der Youtube Auftritt"></a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="footer_content">
-        <div class="column-footer-left">
-          <p>Home</p>
-          <p>Produkte</p>
-          <p>Kontakt</p>
-          <p>Über uns</p>
-        </div>
-        <div class="column-footer-middle">
-          <p>Electronic Bikes</p>
-          <p>Marienstraße 20</p>
-          <p>Heidenheim</p>
-        </div>
-        <div class="column-footer-right">
-          <p>Follow us.</p>
-          <p>Facebook</p>
-          <p>Instagram</p>
-        </div>
-      </div>
 
-
-
-
-
-
-  </footer>
-  <!--Hier endet der Footer Bereich-->
-
-
+    </footer>
+    <!--Hier endet der Footer Bereich-->
 
   </div>
-
+  <!--Das ist das Ende des Wrappers-->
 
 
 </body>
