--- a/Über uns.html
+++ b/Über uns.html
@@ -77,19 +77,11 @@
       </div>
 
 
-  </div>
-
-
-
-
-  </footer>
-  <!--Hier endet der Footer Bereich-->
-
-
+    </footer>
+    <!--Hier endet der Footer Bereich-->
 
   </div>
-
-
+  <!--Das ist das Ende des Wrappers-->
 
 </body>
 
