--- a/Über uns.html
+++ b/Über uns.html
@@ -3,7 +3,7 @@
 <html lang="de" dir="ltr">
 
 <head>
-  <title>Pendix</title>
+  <title>Über uns - Pendix</title>
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
