CSS für Buttons gecleart

--- a/Produkt.html
+++ b/Produkt.html
@@ -59,7 +59,7 @@
             <div class="column-50-right">
               <h2> Technische Daten </h2>
               <p> hier soll die Tabelle hin </p>
-              <button class="button" style?="background-color:blue">Read more</button>
+              <button class="read_more_button" style?="background-color:blue">Read more</button>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="column-50-left">
               <h2> Das Komplettpaket </h2>
               <p> Infos zum Paket </p>
-              <button class="button" style?="background-color:blue">Read more</button>
+              <button class="read_more_button" style?="background-color:blue">Read more</button>
             </div>
             <div class="column-50-right">
               <img src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
