--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <div class="column-50-left">
                 <h2> Worlwide und doch direkt vor Ihrer Haustüre </h2>
                 <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
-                <button class="button" style?="background-color:blue">Read more</button>
+                <button class="read_more_button" style?="background-color:blue">Read more</button>
               </div>
               <div class="column-50-right">
                 <img src="worldwide.svg" alt="Weltsymbol" width="350" height="500">
@@ -100,7 +100,7 @@
                 <h2> Die Umwelt geht uns alle etwas an </h2>
                 <p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.
                 </p>
-                <button class="button" style?="background-color:blue">Read more</button>
+                <button class="read_more_button" style?="background-color:blue">Read more</button>
               </div>
               <div class="column-50-right">
                 <img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitssymbol" width="350" height="500">
@@ -111,7 +111,7 @@
           <!-- Ende der Benefits -->
 
 
-          <div class="productbutton">
+          <div class="gotoproductbutton">
             <button onclick="location.href='https://www.google.de'" type="button" name="button">
               <p>Zu unseren Produkten</p>
             </button>
