Bild bei Standard Produkt verändert

--- a/Produkt.html
+++ b/Produkt.html
@@ -74,7 +74,7 @@
               <button class="read_more_button" style?="background-color:blue">Read more</button>
             </div>
             <div class="column-50-right">
-              <img src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
+              <img class="round-image-komplettpaket"src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
             </div>
           </div>
       </div>
