Bikestail Tabelle technische Daten hinzugefügt

--- a/Produkt.html
+++ b/Produkt.html
@@ -71,12 +71,12 @@
         <div class="container-1">
           <div class="row">
             <div class="column-50-left">
-              <img src="Bikestail_Skizze_Fahrrad.JPG" alt="Fahrradbild" width="350" height="500">
+              <img src="Bikestail_Motor.JPG" alt="Motor Bikestail" width="350" height="500">
             </div>
             <div class="column-50-right">
-              <h2> Technische Daten </h2>
-              <p> hier soll die Tabelle hin </p>
-              <button class="read_more_button" style?="background-color:blue">Read more</button>
+              <h2> Kompakt und powervoll </h2>
+              <p> Mit dem leistungsstarken Motor im Aluminiumgehäuse verwandelst Du dein Fahrrad in wenigen Minuten zum E-Bike! </p>
+              <button class="read_more_button" style?="background-color:blue"> Für nur 540,00 € </button>
             </div>
           </div>
         </div>
@@ -87,8 +87,12 @@
           <div class="row">
             <div class="column-50-left">
               <h2> Das Komplettpaket </h2>
-              <p> Infos zum Paket </p>
-              <button class="read_more_button" style?="background-color:blue">Read more</button>
+              <ul>
+								<li> Antriebsmotor in wasserdichtem Aluminiumgehäuse</li>
+								<li> Pedal- und Bremssensor</li>
+								<li> Spezielles Ladekabel für lange Haltbarkeit</li>
+                <li> Passende Tasche</li>
+							</ul>
             </div>
             <div class="column-50-right">
               <img class="round-image-komplettpaket"src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
@@ -96,10 +100,54 @@
           </div>
       </div>
 
+      <!-- Der Container für die Tabelle mit den technischen Daten  -->
+      <div class="container-technische-daten">
+        <div class="row">
+          <h2>Technische Daten </h2>
+          <table>
+            <tr>
+            <td>Leistung</td>
+            <td>250 Watt </td>
+            </tr>
+            <tr>
+            <td>Geschwindigkeit (max)</td>
+            <td>25 km/h</td>
+            </tr>
+            <tr>
+            <td> Zusatzgewicht </td>
+            <td> 5,250 kg </td>
+            </tr>
+            <tr>
+            <td>Gesamtgröße </td>
+            <td> 380 x 145 x 75 mm</td>
+            </tr>
+            <tr>
+            <td>Gehäuse </td>
+            <td>Aluminium</td>
+            </tr>
+            <tr>
+            <td>Akkutp</td>
+            <td>Lithium-Ionen Batterie</td>
+            </tr>
+            <tr>
+  					<td>Kapazität</td>
+  					<td> 10,4 Ah</td>
+  				  </tr>
+  				  <tr>
+  					<td>Spannung</td>
+  					<td>36 V</td>
+  				  </tr>
+            <tr>
+            <td>Maße Akku</td>
+            <td>80 x 190 mm (D x H)</td>
+            </tr>
+          </table>
+        </div>
+      </div>
 
 		<!-- hier endet Bikestail  -->
 		<!-- der grüne Block mit Premium-->
-		<h2 class="separator">Premium Variante</h2>
+		<h1 class="separator">Premium Variante</h1>
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
 		<div class="container-1-Produktdaten">
 			<div class="row">
@@ -183,7 +231,7 @@
 			</div>
 		</div>
 
-		<div class="container-produktdaten b-white">
+		<div class="container-technische-daten">
 			<div class="row">
 				<h4>Technische Daten </h4>
 				<table>
@@ -313,7 +361,7 @@
 			</div>
 		</div>
 
-		<div class="container-produktdaten b-white">
+		<div class="container-technische-daten">
 			<div class="row">
 				<h4>Technische Daten </h4>
 				<table>
