Strukturierung der CSS-Datei in einzelne Abteilungen für Startseite, Produktseite

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <div class="dropdown">
             <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
             <div class="dropdown-content">
-              <a href="Produkt.html">Basic</a>
-              <a href="Produkt.html">Luxus</a>
+              <a href="Produkt.html">Standard</a>
+              <a href="Produkt.html">Premium</a>
             </div>
           </div>
           <a href="Kontakt.html">Kontakt</a>
